login register va detail qismlari qoshildi

--- a/templates/index.html
+++ b/templates/index.html
@@ -163,8 +163,8 @@
 						<li class="active"><a href="#">Bosh sahifa</a></li>
 						<li><a href="{% url 'products' %}">Mahsulotlar</a></li>
 						<li><a href="#">Profil</a></li>
-						<li><a href="#">Kirish</a></li>
-						<li><a href="#">Ro'yxatdan o'tish</a></li>
+						<li><a href="{% url 'login' %}">Kirish</a></li>
+						<li><a href="{% url 'register' %}">Ro'yxatdan o'tish</a></li>
 
 					</ul>
 					<!-- /NAV -->
