--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
+{% load static  %}
 <html>
 <head>
 <title>Luxury Watches | Single</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'new/css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all" />
 <!--jQuery(necessary for Bootstrap's JavaScript plugins)-->
-<script src="js/jquery-1.11.0.min.js"></script>
+<script src="{% static 'new/js/jquery-1.11.0.min.js' %}"></script>
 <!--Custom-Theme-files-->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="{% static 'new/css/style.css'%}" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--start-menu-->
-<script src="js/simpleCart.min.js"> </script>
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
+<script src="{% static 'new/js/simpleCart.min.js'"> </script>
+<link href="{% static 'new/css/memenu.css'%}" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="{% static 'new/js/memenu.js'%}"></script>
 <script>$(document).ready(function(){$(".memenu").memenu();});</script>	
 <!--dropdown-->
-<script src="js/jquery.easydropdown.js"></script>	
+<script src="{% static 'newjs/jquery.easydropdown.js'%}"></script>
 <script type="text/javascript">
 	$(function() {
 	
@@ -43,48 +44,11 @@
 </head>
 <body> 
 	<!--top-header-->
-	<div class="top-header">
-		<div class="container">
-			<div class="top-header-main">
-				<div class="col-md-6 top-header-left">
-					<div class="drop">
-						<div class="box">
-							<select tabindex="4" class="dropdown drop">
-								<option value="" class="label">Dollar :</option>
-								<option value="1">Dollar</option>
-								<option value="2">Euro</option>
-							</select>
-						</div>
-						<div class="box1">
-							<select tabindex="4" class="dropdown">
-								<option value="" class="label">English :</option>
-								<option value="1">English</option>
-								<option value="2">French</option>
-								<option value="3">German</option>
-							</select>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				<div class="col-md-6 top-header-left">
-					<div class="cart box_1">
-						<a href="checkout.html">
-							<div class="total">
-								<span class="simpleCart_total"></span></div>
-								<img src="images/cart-1.png" alt="" />
-						</a>
-						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
+
 	<!--top-header-->
 	<!--start-logo-->
 	<div class="logo">
-		<a href="index.html"><h1>Luxury Watches</h1></a>
+		<a href="#"><h1>Siz tanlagan mahsulot haqida batafsil</h1></a>
 	</div>
 	<!--start-logo-->
 	<!--bottom-header-->
@@ -93,8 +57,8 @@
 			<div class="header">
 				<div class="col-md-9 header-left">
 				<div class="top-nav">
-					<ul class="memenu skyblue"><li class="active"><a href="index.html">Home</a></li>
-						<li class="grid"><a href="#">Men</a>
+					<ul class="memenu skyblue"><li class="active"><a href="{% url 'index'%}">Bosh sahifa</a></li>
+						<li class="grid"><a href="{% url 'products' %}">Mahsulotlar</a>
 							<div class="mepanel">
 								<div class="row">
 									<div class="col1 me-one">
@@ -137,7 +101,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="grid"><a href="#">Women</a>
+						<li class="grid"><a href="{% url 'login' %}">Kirish</a>
 							<div class="mepanel">
 								<div class="row">
 									<div class="col1 me-one">
@@ -180,7 +144,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="grid"><a href="#">Kids</a>
+						<li class="grid"><a href="#">Profil</a>
 							<div class="mepanel">
 								<div class="row">
 									<div class="col1 me-one">
@@ -222,11 +186,7 @@
 									</div>
 								</div>
 							</div>
-						</li>
-						<li class="grid"><a href="typo.html">Blog</a>
-						</li>
-						<li class="grid"><a href="contact.html">Contact</a>
-						</li>
+
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
@@ -263,15 +223,13 @@
 					<div class="col-md-5 single-top-left">	
 						<div class="flexslider">
 							  <ul class="slides">
-								<li data-thumb="images/s-1.jpg">
-									<div class="thumb-image"> <img src="images/s-1.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
+								<li data-thumb="{{ product_detail.main_image.url }}">
+									<div class="thumb-image"> <img src="{{ product_detail.main_image.url }}" data-imagezoom="true" class="img-responsive" alt=""/> </div>
 								</li>
-								<li data-thumb="images/s-2.jpg">
-									 <div class="thumb-image"> <img src="images/s-2.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-								</li>
-								<li data-thumb="images/s-3.jpg">
-								   <div class="thumb-image"> <img src="images/s-3.jpg" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-								</li> 
+
+</ul>
+
+
 							  </ul>
 						</div>
 						<!-- FlexSlider -->
@@ -291,7 +249,8 @@
 					</div>	
 					<div class="col-md-7 single-top-right">
 						<div class="single-para simpleCart_shelfItem">
-						<h2>Lorem Ipsum</h2>
+						<h2>{{ product_detail.title }}</h2>
+
 							<div class="star-on">
 								<ul class="star-footer">
 										<li><a href="#"><i> </i></a></li>
@@ -306,10 +265,17 @@
 								</div>
 							<div class="clearfix"> </div>
 							</div>
-							
-							<h5 class="item_price">$ 95.00</h5>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+
+							<h5 class="item_price">${% if product_detail.discount_price %}
+                                                            $ {{ product_detail.discount_price }}
+            <del style="font-size: 0.7em; color: #999;">$ {{ product_detail.price }}</del>
+        {% else %}
+            $ {{ product_detail.price }}
+        {% endif %}</h5>
+
+							<p>{{ product_detail.desc }} </p>
 							<div class="available">
+
 								<ul>
 									<li>Color
 										<select>
@@ -340,43 +306,7 @@
 					</div>
 					<div class="clearfix"> </div>
 				</div>
-				<div class="tabs">
-					<ul class="menu_drop">
-				<li class="item1"><a href="#"><img src="images/arrow.png" alt="">Description</a>
-					<ul>
-						<li class="subitem1"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</a></li>
-						<li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-						<li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-					</ul>
-				</li>
-				<li class="item2"><a href="#"><img src="images/arrow.png" alt="">Additional information</a>
-					<ul>
-					    <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-						<li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-					</ul>
-				</li>
-				<li class="item3"><a href="#"><img src="images/arrow.png" alt="">Reviews (10)</a>
-					<ul>
-						<li class="subitem1"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</a></li>
-						<li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-						<li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-					</ul>
-				</li>
-				<li class="item4"><a href="#"><img src="images/arrow.png" alt="">Helpful Links</a>
-					<ul>
-					    <li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-						<li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-					</ul>
-				</li>
-				<li class="item5"><a href="#"><img src="images/arrow.png" alt="">Make A Gift</a>
-					<ul>
-						<li class="subitem1"><a href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</a></li>
-						<li class="subitem2"><a href="#"> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore</a></li>
-						<li class="subitem3"><a href="#">Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes </a></li>
-					</ul>
-				</li>
-	 		</ul>
-				</div>
+
 				<div class="latestproducts">
 					<div class="product-one">
 						<div class="col-md-4 product-left p-left"> 
@@ -507,49 +437,7 @@
 	</div>
 	<!--end-single-->
 	<!--information-starts-->
-	<div class="information">
-		<div class="container">
-			<div class="infor-top">
-				<div class="col-md-3 infor-left">
-					<h3>Follow Us</h3>
-					<ul>
-						<li><a href="#"><span class="fb"></span><h6>Facebook</h6></a></li>
-						<li><a href="#"><span class="twit"></span><h6>Twitter</h6></a></li>
-						<li><a href="#"><span class="google"></span><h6>Google+</h6></a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 infor-left">
-					<h3>Information</h3>
-					<ul>
-						<li><a href="#"><p>Specials</p></a></li>
-						<li><a href="#"><p>New Products</p></a></li>
-						<li><a href="#"><p>Our Stores</p></a></li>
-						<li><a href="contact.html"><p>Contact Us</p></a></li>
-						<li><a href="#"><p>Top Sellers</p></a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 infor-left">
-					<h3>My Account</h3>
-					<ul>
-						<li><a href="account.html"><p>My Account</p></a></li>
-						<li><a href="#"><p>My Credit slips</p></a></li>
-						<li><a href="#"><p>My Merchandise returns</p></a></li>
-						<li><a href="#"><p>My Personal info</p></a></li>
-						<li><a href="#"><p>My Addresses</p></a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 infor-left">
-					<h3>Store Information</h3>
-					<h4>The company name,
-						<span>Lorem ipsum dolor,</span>
-						Glasglow Dr 40 Fe 72.</h4>
-					<h5>+955 123 4567</h5>	
-					<p><a href="mailto:example@email.com">contact@example.com</a></p>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
+
 	<!--information-end-->
 	<!--footer-starts-->
 	<div class="footer">
