profilni korish qismi ham qilindi

--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -144,7 +144,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="grid"><a href="#">Profil</a>
+						<li class="grid"><a href="{% url 'profile' %}">Profil</a>
 							<div class="mepanel">
 								<div class="row">
 									<div class="col1 me-one">
