--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Bosh sahifa</a></li>
 						<li><a href="{% url 'products' %}">Mahsulotlar</a></li>
-						<li><a href="#">Profil</a></li>
+						<li><a href="{% url 'profile'%}">Profile</a></li>
 						<li><a href="{% url 'login' %}">Kirish</a></li>
 						<li><a href="{% url 'register' %}">Ro'yxatdan o'tish</a></li>
 
