--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -309,45 +309,23 @@
 
 				<div class="latestproducts">
 					<div class="product-one">
-						<div class="col-md-4 product-left p-left"> 
+                        {% for product in related_product%}
+						<div class="col-md-4 product-left p-left">
+
 							<div class="product-main simpleCart_shelfItem">
-								<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-1.png" alt="" /></a>
+								<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="{{product.main_image.url}}" alt="" /></a>
 								<div class="product-bottom">
-									<h3>Smart Watches</h3>
+									<h3>{{product.title}}</h3>
 									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
+									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ {{product.price}}</span></h4>
 								</div>
 								<div class="srch">
-									<span>-50%</span>
+									<span>-{{product.precent}}</span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 product-left p-left"> 
-							<div class="product-main simpleCart_shelfItem">
-								<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-2.png" alt="" /></a>
-								<div class="product-bottom">
-									<h3>Smart Watches</h3>
-									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-								</div>
-								<div class="srch">
-									<span>-50%</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 product-left p-left"> 
-							<div class="product-main simpleCart_shelfItem">
-								<a href="single.html" class="mask"><img class="img-responsive zoom-img" src="images/p-3.png" alt="" /></a>
-								<div class="product-bottom">
-									<h3>Smart Watches</h3>
-									<p>Explore Now</p>
-									<h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-								</div>
-								<div class="srch">
-									<span>-50%</span>
-								</div>
-							</div>
-						</div>
+                        {% endfor %}
+
 						<div class="clearfix"></div>
 					</div>
 				</div>
